--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 <br>
-<div class="site-avatar"><img src="{{ site.avatar }}">
+<div class="site-avatar"><img src="{{ site.baseurl }}/me.png">
 </div>
     <a class="site-title" href="{{ "/" | relative_url}}">{{ site.title | escape }}</a>
 
