--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -305,7 +305,7 @@
          float: right;
 
          #searchString {
-           width: 153px;
+           width: 133px;
            border: none;
            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset;
            padding: 0.3em 0.6em;
@@ -347,8 +347,8 @@
 .layout1 {
    padding: 5px;
    margin: 10px;
-   background: #e1ebf2;    
-   border-radius: 0.1px;
+   background: #caeaf0;
+   border-radius: 3px;
    box-shadow: 0 0 0 6px #ffffff, 1px 1px 6px 8px rgba(10, 10, 0, 0.4);   
 }
 
